--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <td class="border border-gray-300 px-4 py-2">68.06</td>
             <td class="border border-gray-300 px-4 py-2">70.49</td>
             <td class="border border-gray-300 px-4 py-2">67.12</td>
-            <td class="border border-gray-300 px-4 py-2">nan</td>
+            <td class="border border-gray-300 px-4 py-2">69.39</td>
           </tr>
           <tr class=bg-white>
             <td class="border border-gray-300 px-4 py-2 font-medium">Whisper Mesonet</td>
@@ -311,7 +311,7 @@
             <td class="border border-gray-300 px-4 py-2">0.75</td>
             <td class="border border-gray-300 px-4 py-2">0.49</td>
             <td class="border border-gray-300 px-4 py-2">0.36</td>
-            <td class="border border-gray-300 px-4 py-2">nan</td>
+            <td class="border border-gray-300 px-4 py-2">0.32</td>
           </tr>
           <tr class=bg-gray-50>
             <td class="border border-gray-300 px-4 py-2 font-medium">Hubert ECAPA</td>
