--- a/index.html
+++ b/index.html
@@ -414,6 +414,34 @@
     </div>
   </div>
 
+  <div class="max-w-5xl mx-auto bg-white shadow-lg rounded-lg p-4 mt-8">
+    <h2 class="text-2xl font-semibold text-center text-blue-600 mb-4">Pooled EER (%)</h2>
+  
+    <div class="overflow-x-auto">
+      <table class="min-w-full border-collapse border border-gray-300 text-sm">
+        <thead class="bg-blue-600 text-white">
+          <tr>
+            <th class="border border-gray-300 px-4 py-2 text-left">System</th>
+            <th class="border border-gray-300 px-4 py-2 text-left">Pooled EER (%)</th>
+          </tr>
+        </thead>
+        <tbody class="bg-white text-gray-800">
+          <tr><td class="border border-gray-300 px-4 py-2">Resemble Detect</td><td class="border border-gray-300 px-4 py-2">12.38</td></tr>
+          <tr><td class="border border-gray-300 px-4 py-2">XLSR SLS</td><td class="border border-gray-300 px-4 py-2">15.69</td></tr>
+          <tr><td class="border border-gray-300 px-4 py-2">TCM ADD</td><td class="border border-gray-300 px-4 py-2">16.36</td></tr>
+          <tr><td class="border border-gray-300 px-4 py-2">XLSR Mamba</td><td class="border border-gray-300 px-4 py-2">22.29</td></tr>
+          <tr><td class="border border-gray-300 px-4 py-2">WhisperMesonet</td><td class="border border-gray-300 px-4 py-2">23.77</td></tr>
+          <tr><td class="border border-gray-300 px-4 py-2">Wav2Vec2 ECAPA</td><td class="border border-gray-300 px-4 py-2">28.81</td></tr>
+          <tr><td class="border border-gray-300 px-4 py-2">AASIST</td><td class="border border-gray-300 px-4 py-2">33.16</td></tr>
+          <tr><td class="border border-gray-300 px-4 py-2">Wavlm ECAPA</td><td class="border border-gray-300 px-4 py-2">33.48</td></tr>
+          <tr><td class="border border-gray-300 px-4 py-2">Rawgat ST</td><td class="border border-gray-300 px-4 py-2">33.92</td></tr>
+          <tr><td class="border border-gray-300 px-4 py-2">Hubert ECAPA</td><td class="border border-gray-300 px-4 py-2">43.03</td></tr>
+          <tr><td class="border border-gray-300 px-4 py-2">Rawnet 2</td><td class="border border-gray-300 px-4 py-2">46.17</td></tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+  
 </body>
 
 </html>
