--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
 
 
 
-    <h3 class="section-title" style="font-size: 1.75rem; margin-top: 4rem; margin-bottom: 2rem;">Team</h3>
+    <h3 class="section-title" style="font-size: 1.75rem; margin-top: 4rem; margin-bottom: 2rem;">Current Collaborators</h3>
 
     <div class="members-grid">
       <div class="member-card">
@@ -699,7 +699,7 @@
       <footer>
         <div class="social-links">
           <a href="https://huggingface.co/Speech-Arena-2025" target="_blank">HuggingFace</a>
-          <a href="speech.arena.eval@gmail.com" target="speech.arena.eval@gmail.com">Contact</a>
+          <a href="mailto:speech.arena.eval@gmail.com" target="mailto:speech.arena.eval@gmail.com">Contact</a>
         </div>
         <p>&copy; 2025 Speech Arena. Advancing Open Speech Security Research.</p>
       </footer>
