--- a/index.html
+++ b/index.html
@@ -660,24 +660,20 @@
     </section>
 
         <section id="about" class="about">
-      <h2 class="section-title">Acknowledgments</h2>
-      <p class="about-text">
-        This work was partially supported by the Swiss National Science Foundation through the project PASS:
-        Pathological Speech
-        Synthesis (grant agreement no. 219726) and by the Innosuisse through the flagship project IICT: Inclusive
-        Information and Communication Technologies (grant agreement no.
-        PFFS-21-47), and by the Portuguese national funds through
-        Fundação para a Ciência e a Tecnologia, with reference
-        DOI:10.54499/UIDB/50021/2020, by the Recovery and Resilience Plan and Next Generation EU European Funds, with
-        reference C644865762-00000008 Accelerat.AI. We thank André Mayoraz for setting up the listening test server.
-      </p>
+      <h2>Supported By</h2>
+      <!-- <p class="about-text"> -->
+<ul style="margin-top: 1rem; padding-left: 1.5rem; color: var(--text-muted); line-height: 1.6;">
+  <li>The Swiss National Science Foundation through the project PASS: Pathological Speech Synthesis (grant agreement no. 219726) and by the Innosuisse through the flagship project IICT: Inclusive Information and Communication Technologies (grant agreement no. PFFS-21-47),</li>
+  <li>Portuguese national funds through Fundação para a Ciência e a Tecnologia, with reference DOI:10.54499/UIDB/50021/2020, by the Recovery and Resilience Plan and Next Generation EU European Funds, with reference C644865762-00000008 Accelerat.AI</li>
+  <li>Estonian Centre of Excellence in Artificial Intelligence (EXAI)</li>
+</ul>
     </section>
 
 
     <!-- Supported By Section -->
     <section class="supported-by">
       <div class="container">
-        <h3 class="supported-title">Supported By</h3>
+        <h3 class="supported-title"></h3>
         <div class="sponsor-logos">
           <a href="https://www.idiap.ch" target="_blank" rel="noopener">
             <img src="./assets/idiap.png" alt="Idiap Research Institute Logo">
