--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
     </section>
 
         <section id="about" class="about">
-      <h2>This work is partially supported by</h2>
+      <h2>This work is partially funded by</h2>
       <!-- <p class="about-text"> -->
 <ul style="margin-top: 1rem; padding-left: 1.5rem; color: var(--text-muted); line-height: 1.6;">
   <li>The Swiss National Science Foundation through the project PASS: Pathological Speech Synthesis (grant agreement no. 219726) and by the Innosuisse through the flagship project IICT: Inclusive Information and Communication Technologies (grant agreement no. PFFS-21-47),</li>
